# suspekt-demonstrator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backlog/: config.yml
backlog/milestones/: m-0 - m1-core-foundation.md  m-1 - m2-inventarization.md  m-2 - m3-gamification.md
backlog/tasks/: task-1 - Set-up-Python-package-skeleton-and-profile-system.md  task-2 - Build-base-Jinja2-UI-template-with-System180-branding.md  task-3 - Implement-camera-device-layer-and-3-camera-MJPEG-streaming.md  task-4 - Add-camera-configuration-swap-positions-and-correct-rotation.md
config/: config.json
docs/: hardware.md  models.md  setup.md
src/demonstrator/: __init__.py  cli.py
src/demonstrator/apps/: __init__.py  common.py  game.py  normal.py
src/demonstrator/config/: __init__.py  camera_ids.py  settings.py
src/demonstrator/game/: __init__.py  logic.py
src/demonstrator/inference/: __init__.py  yolo.py
src/demonstrator/vision/: __init__.py  aruco.py  camera.py
src/niimprint/: __init__.py  __main__.py  printer.py
templates/: index.html  normal_index.html  roi_calibration.html
tools/: convert_models.sh  inspect_model.py  install_desktop_icons.sh  install_jetson_requirements.sh  launch_game_kiosk.sh  update_local_install.sh
