[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "suspekt-demonstrator"
version = "0.1.0"
description = "System180 demonstrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
    "jinja2>=3.1,<4.0",
    "depthai>=2.30,<3.0",
    "pydantic>=2.9,<3.0",
    "PyYAML>=6.0,<7.0",
    "opencv-python>=4.10,<5.0",
    "numpy==1.23.5",
    "python-multipart>=0.0.20,<1.0",
]

[project.optional-dependencies]
jetson = ["tensorrt>=10.0"]
dev = ["pytest>=8.3,<9.0"]

[project.scripts]
demonstrator = "demonstrator.cli:main"
demonstrator-inventarization = "demonstrator.apps.inventarization.app:main"
demonstrator-gamification = "demonstrator.apps.gamification.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
demonstrator = ["profiles/*.yaml", "templates/**/*.html", "static/**/*", "models/*.engine", "models/*.pt"]
